styling my page

--- a/helloworld.html
+++ b/helloworld.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>dammy's page</title>
+	<title>meet blue</title>
+
+	<!--<style>
+		body {
+			background-image: url("dammy.jpg ");
+			background-position: center;
+		} 
+	</style>-->
+	<link href= "helloworld.css" rel="stylesheet" type="text/css" >
+	<link href="images/use.png" rel="icon" type="image/16x16-icon"/>
+
 </head>
 <body>
-
+	<h1><strong><em>My pet blue......</em></strong></h1>
+	<img src="images/mr blue.jpeg" alt="image">  
+	<p>
+		
+	</p>
 </body>
 </html>
