--- a/helloworld.html
+++ b/helloworld.html
@@ -16,8 +16,16 @@
 <body>
 	<h1><strong><em>My pet blue......</em></strong></h1>
 	<img src="images/mr blue.jpeg" alt="image">  
-	<p>
-		
+	<p><em>
+		I met and fell in love with my pet fish Mr blue when i saw him swimming in the aquarium in the pet store and immediately my baby nephew named him blue.</br>
+	    Mr Blue usually spends most of time swimming lazily in his bowl during the day and seems to be more active at night time.</br>
+	    Mr blue eats fish flakes, we feed him in the morning and evening. Usually when he is full, he just swims away from the top of his bowl.
+	</em>
 	</p>
+	<P> Here are some other fishes in Blue's category</P>
+	<ul>
+		<li>The goldfish</li>
+		<li>The purple fish</li>
+	</ul>
 </body>
 </html>
